methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:11: error: type mismatch;
 found   : Int
 required: Boolean
    if (seenBaggle) {
        ^MethodsReturning:12: error: type mismatch;
 found   : Int
 required: Boolean
      return seenBaggle
             ^MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i <- 1 to 6) {
         ^