methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var seenBaggle=0;
  for (i <- 1 to 6) {
    for (j <- 1 to 6) {
      forward();
      if (isOverBaggle()) {
        seenBaggle=seenBaggle+1
      }
    }
    backward(6);
    if (seenBaggle) {
      return seenBaggle
    }
  }
}